src/test/resources/public/input/typechecking/fail/incompatible_condition/fail03.jova
class Test{

}

class Main {

  public int main() {
    Test test;
    test = new Test;
	
    while(test){
      print("Some words...")
    }
    return 0;
  }

}